# planting-planner

./: .gitignore  .markdownlint.yaml  README.md  pyproject.toml  start-dev.ps1
docs/docs-bundle/: LICENSE  README.md  pyproject.toml
docs/docs-bundle/adapter/: __init__.py
docs/docs-bundle/backend/app/: dependencies.py  etl.py  etl_runner.py  main.py  seed.py  services.py
docs/docs-bundle/backend/app/db/: connection.py  migrations.py  schema.py
docs/docs-bundle/backend/app/etl/: __init__.py
docs/docs-bundle/backend/app/etl_runner/: __init__.py  status.py
docs/docs-bundle/backend/app/routes/: __init__.py  crops.py
docs/docs-bundle/backend/app/seed/: __init__.py  data_loader.py
docs/docs-bundle/backend/tests/: test_crops.py  test_db_schema.py  test_etl.py  test_etl_modules_smoke.py  test_recommend.py  test_schemas.py
docs/docs-bundle/backend/tests/ci/: test_playwright_metrics.py
docs/docs-bundle/backend/tests/etl/: __init__.py  test_retry.py  test_schema.py
docs/docs-bundle/backend/tests/seed/: test_writers_crops.py  test_writers_growth.py  test_writers_markets.py
docs/docs-bundle/data/: crops.json
docs/docs-bundle/docs/spec/planting-planner-docs-detailed-plus/: README.md
docs/docs-bundle/docs/spec/v0.1/: API_REFERENCE.md  ARCHITECTURE.md  CONTRIBUTING.md  DATA_SCHEMA.md  DATA_SOURCES.md  DISCLAIMER.md  (+3 more)
docs/docs-bundle/frontend/: .eslintrc.json  package.json  tsconfig.json  vitest.config.ts
docs/docs-bundle/frontend/src/: index.css  main.test.tsx  main.tsx  types.test.ts  types.ts
docs/docs-bundle/frontend/tests/: app.refetch-focus.test.tsx
(+459 files in other folders)
