[tool.poetry]
name = "planting-planner"
version = "0.1.0"
description = "Planting Planner monorepo configuration"
authors = []
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.backend]
optional = false

[tool.poetry.group.backend.dependencies]
fastapi = "0.115.0"
httpx = "0.27.2"
uvicorn = { version = "0.30.6", extras = ["standard"] }

[tool.poetry.group.dev]
optional = false

[tool.poetry.group.dev.dependencies]
pytest = "8.3.2"
httpx = "0.27.2"
ruff = "0.6.4"
black = "24.8.0"
mypy = "1.11.2"
types-requests = "2.32.0.20240914"

[tool.black]
line-length = 100
target-version = ["py311"]
